@@ -11,14 +11,14 @@ data/Reactor.dat    data/XNC.dat\
 data/MINOS_Spectra.dat  data/NUMI9plus.dat\
 data/XCC.dat        data/XQE.dat\
 data/ICARUS.glb     data/JHFSKantinew.glb\
-data/NUMI.glb       data/NUMI9.glb\
+data/NUMI9.glb\
 data/NuFact2.glb    data/JHFHKAll.glb\
 data/JHFSKcomb.glb  data/NUMI12.glb\
 data/NUMI9anti.glb  data/OPERA.glb\
-data/JHFSK.glb      data/JHFSKnew.glb\
+data/JHFSKnew.glb\
 data/NUMI12anti.glb data/NUMI9comb.glb\
-data/Reactor.glb    data/JHFSKanti.glb\
-data/MINOS.glb      data/NUMI12comb.glb\
+data/Reactor.glb\
+data/MINOS.glb data/NUMI12comb.glb\
 data/NuFact.glb\
 examples/Makefile.in examples/example1.c  examples/example3.c examples/myio.c\
 examples/example-tour.c  examples/example2.c  examples/example4.c\
